src/testData/analysis/globalMatchData/zeroInIndex.cr
$0
<error descr="Global match index starting with leading zero is invalid since 1.7">$0?</error>
$1
$1?
<error descr="Global match index starting with leading zero is invalid since 1.7">$01</error>
<error descr="Global match index starting with leading zero is invalid since 1.7">$01?</error>
<error descr="Global match index starting with leading zero is invalid since 1.7">$012</error>
<error descr="Global match index starting with leading zero is invalid since 1.7">$012?</error>
$10
$10?
$102
$102?